--- a/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_create_event.xml
@@ -155,17 +155,13 @@
                 android:text="Accept Automatically?"
                 android:textSize="18dp" />
 
-            <RadioGroup
-                android:layout_width="match_parent"
-                android:layout_height="match_parent">
+            <CheckBox
+                android:id="@+id/checkBox2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:text="CheckBox" />
 
-                <RadioButton
-                    android:id="@+id/autoYes"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Yes" />
-
-            </RadioGroup>
         </LinearLayout>
 
     </LinearLayout>
