--- a/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_organizer_see_attendee_event_requests.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Event_list_2">
+    tools:context=".See_Events_Organizer">
 
     <TextView
         android:id="@+id/textView26"
