--- a/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
+++ b/SEG Project V2/app/src/main/res/layout/activity_welcome_page.xml
@@ -152,10 +152,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="See Upcoming Events"
-        app:layout_constraintBottom_toTopOf="@+id/seeEvents_button"
+        app:layout_constraintBottom_toTopOf="@+id/pastEventsButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createEvent_button"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/pastEventsButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="See past Events"
+        app:layout_constraintBottom_toTopOf="@+id/seeEvents_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/upcomingEventsButton"
         android:visibility="gone" />
 
     <Button
